--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <source media="(max-width: 600px)" src="images/white background.png">
         <!--Tablet and above Image-->
         <source media="(min-width: 601px)" src="images/white background.png">
-        <img loading="lazy" decoding="async" src="images/fwhite background.png" alt="footer" width="1280" height="568">
+        <img loading="lazy" decoding="async" src="images/white background.png" alt="footer" width="1280" height="568">
 
         
     </picture>
