--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <div class="cs-container">
         <div class="cs-wrapper">
             <picture class="cs-picture">
-                <source media="(max-width: 610px)" src="images/header.png">
-                <source media="(min-width: 610px)" src="images/header.png">
-                <img loading="lazy" decoding="async" src="images/header.png" alt="broken and repaired phone" width="605" height="605" aria-hidden="true">
+                <source media="(max-width: 610px)" src="header.png">
+                <source media="(min-width: 610px)" src="header.png">
+                <img loading="lazy" decoding="async" src="header.png" alt="broken and repaired phone" width="605" height="605" aria-hidden="true">
             </picture>
         </div>
         <div class="cs-content">
